Fix cut off hover effect in table by removing padding from table container

--- a/style.css
+++ b/style.css
@@ -127,6 +127,10 @@ footer {
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
 }
 
+table.container {
+    padding: 0;
+}
+
 .container2 {
 	position: absolute;
 	top: 6%;
